--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,7 @@
 <div ng-cloak data-ng-controller="HomeController">
-  <h1>{{appInfo.name}} ({{appInfo.version}})</h1>
+  <h1>Home</h1>
 
-  <p>{{appInfo.description}}</p>
+  <p>Loreum Ipsum...</p>
 
 
 </div>
