domain naming generalization, css decoupling, fixed css import ordering to correctly include bootstrap theme

--- a/src/app/app-header.html
+++ b/src/app/app-header.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
+<div class="container-flex">
+<div class="navbar navbar-default" role="navigation">
+  <div class="container-flex">
     <div class="navbar-header">
       <span class="navbar-toggle flat" ng-click="menu.openToggle()">
         <span class="sr-only">Toggle menu</span>
