--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,9 @@
       <section
                class="app-body-panel"
                ng-class="{'menu-open': menu.isOpen}"
-        ><div data-ui-view="appBody"></div></section>
+        >
+        <div ui-view="appBody"></div>
+      </section>
     </section>
 
     <footer></footer>
