--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,109 +1,11 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
+/*@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";*/
 @import "../bower_components/bootswatch-scss/superhero/variables";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
-$web-font: '';
 @import "../bower_components/bootswatch-scss/superhero/bootswatch";
 
 
+@import "app-layout";
 
-/* extend bootstrap animations */
-.slide {
-  left: 100%;
-  @include transition(left .20s ease);
-  &.in {
-    left: 0%;
-  }
-
-  &.navbar-collapse {
-    position: absolute;
-    width: 100%;
-    margin: 0;
-    background-color: $navbar-default-bg;
-    & ul.nav {
-      margin-top: 0;
-      margin-bottom: 0;
-      border-bottom-color: $navbar-default-border;
-    }
-    @media (min-width: $grid-float-breakpoint) {
-      position: static;
-      width: auto;
-    }
-  }
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-}
-
-body section.wrapper {
-  display: flex;
-  height: 100%;
-  flex-flow: column nowrap;
-  align-items: stretch;
-  &>header {
-    .navbar {
-      margin: 0;
-
-      .navbar-toggle.flat{
-        @extend .navbar-brand;
-        border: none;
-        margin: 0;
-      }
-    }
-    flex-basis: 59px;
-    order: 1;
-    max-height:59px;
-  };
-  &>section.app {
-    height: 100%;
-    flex-basis: 100%;
-    order: 2;
-
-    section.app-menu-panel {
-      padding: 0;
-      position: absolute;
-      width: 95%;
-      height: 100%;
-      right: 100%;
-      background-color: rgba(darken($navbar-default-bg, 10%), 0.9);
-      z-index:20;
-      @include transition(right .50s ease);
-
-      .navbar-nav {
-        margin: 0;
-      }
-
-      &.open {
-        right: 5%;
-        @include transition(right .50s ease);
-      }
-    }
-
-    section.app-body-panel {
-      padding: 0 1.2em;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      left: 0;
-      @include transition(left .50s ease);
-
-      &.menu-open {
-        left: 85%;
-        @include transition(left .50s ease);
-      }
-    }
-
-  };
-  &>footer {
-    flex-basis: 50px;
-    max-height: 50px;
-    min-height: 1.2em;
-    order: 3;
-  };
-
-}
-
-
+@import "experiments/experiments.scss";
