continuing to clean up styles and customizations

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,5 +1,4 @@
 <div ng-cloak data-ng-controller="AboutController">
-  <h1>About</h1>
-  <p>{{appInfo.name}} ({{appInfo.version}})</p>
-  <p>{{appInfo.description}}</p>
+  <p>{{app.info.name}} ({{app.info.version}})</p>
+  <p>{{app.info.description}}</p>
 </div>
