--- a/src/app/app-header.html
+++ b/src/app/app-header.html
@@ -6,7 +6,7 @@
         <span class="sr-only">Toggle menu</span>
         <span class="glyphicon glyphicon-tasks"></span>
       </span>
-      <a class="navbar-brand">{{appInfo.name}}</a>
+      <a class="navbar-brand">{{app.title}}</a>
     </div>
   </div>
 </div>
