--- a/src/app/experiments/carousel.html
+++ b/src/app/experiments/carousel.html
@@ -1,6 +1,4 @@
-<div class="experiment-pi">
-  <h1>Carousel Container (for Bootstrap)</h1>
-
+<div class="experiment-carousel">
   <div class="stage">
       <div class="carousel-container">
         <div>One</div>
