--- a/src/app/app-layout.scss
+++ b/src/app/app-layout.scss
@@ -32,24 +32,25 @@ body section.wrapper {
     section.app-menu-panel {
       padding: 0;
       position: absolute;
-      width: 95%;
+      width: 85%;
       height: 100%;
       right: 100%;
-      background-color: rgba(darken($navbar-default-bg, 10%), 0.9);
+      /*background-color: rgba($panel-bg, 0.7);*/
       z-index:20;
       @include transition(right .20s ease);
 
-      .navbar-nav {
-        margin: 0;
+      .panel-body {
+        padding: 0;
       }
 
       &.open {
-        right: 5%;
+        right: 15%;
         @include transition(right .20s ease);
       }
     }
 
     section.app-body-panel {
+      background-color: transparent;
       position: absolute;
       width: 100%;
       height: 100%;
@@ -61,9 +62,6 @@ body section.wrapper {
         @include transition(left .20s ease);
       }
 
-      [ui-view=appBody] {
-        padding: 0 1.2em;
-      }
     }
 
   };
