--- a/src/app/app-menu.html
+++ b/src/app/app-menu.html
@@ -1,10 +1,10 @@
-<ul class="nav navbar-nav">
-  <li
-    ng-repeat="item in menu.items"
-    ng-class="{active: item.active}">
-    <a ng-click="menuItemSelected(item)">
+  <div class="list-group">
+    <a
+      class="list-group-item"
+      ng-repeat="item in menu.items"
+      ng-class="{active: item.active}"
+      ng-click="menuItemSelected(item)">
       <span ng-if="item.glyph" class="glyphicon" ng-class="'glyphicon-' + item.glyph"></span>
-      <span>{{::item.heading}}</span>
+      <span>{{::item.name}}</span>
     </a>
-  </li>
-</ul>
+  </div>
