--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,7 @@
         <div data-ng-include="'app-menu.html'" class="panel-body"></div>
       </section>
       <section
-        class="app-body-panel panel panel-default"
+        class="app-body-panel"
         ng-class="{'menu-open': menu.isOpen}">
         <div class="panel-body">
           <div ui-view="appBody"></div>
