updated package.json to upgrade deps. jscs formatting updates

--- a/src/app/experiments/experiments.html
+++ b/src/app/experiments/experiments.html
@@ -1,3 +1,4 @@
 <div class="list-group">
-  <a class="list-group-item" ng-repeat="experiment in experiments.experiments" ui-sref="experiments.{{experiment.name}}">{{experiment.name}}</a>
+    <a class="list-group-item" ng-repeat="experiment in experiments.experiments"
+       ui-sref="experiments.{{experiment.name}}">{{experiment.name}}</a>
 </div>
