--- a/src/app/app-header.html
+++ b/src/app/app-header.html
@@ -1,13 +1,14 @@
 <div class="container-flex">
-<div class="navbar navbar-default" role="navigation">
-  <div class="container-flex">
-    <div class="navbar-header">
+    <div class="navbar navbar-default" role="navigation">
+        <div class="container-flex">
+            <div class="navbar-header">
       <span class="navbar-toggle flat" ng-click="menu.openToggle()">
         <span class="sr-only">Toggle Menu</span>
         <span class="glyphicon glyphicon-tasks"></span>
       </span>
-      <a class="navbar-brand"><span>{{app.title}}</span><span ng-if="app.subtitle"> | </span><span ng-if="app.subtitle">{{app.subtitle}}</span></a>
+                <a class="navbar-brand"><span>{{app.title}}</span><span ng-if="app.subtitle"> | </span><span
+                        ng-if="app.subtitle">{{app.subtitle}}</span></a>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 </div>
