--- a/src/app/app-layout.scss
+++ b/src/app/app-layout.scss
@@ -12,7 +12,7 @@ body section.wrapper {
   height: 100%;
   flex-flow: column nowrap;
   align-items: stretch;
-  &>header {
+  & > header {
     .navbar {
       border-top-width: 0;
       border-left-width: 0;
@@ -20,7 +20,7 @@ body section.wrapper {
       margin: 0;
       height: $navbar-height;
 
-      .navbar-toggle.flat{
+      .navbar-toggle.flat {
         @extend .navbar-brand;
         border: none;
         margin: 0;
@@ -30,8 +30,9 @@ body section.wrapper {
     flex-shrink: 0;
     flex-grow: 0;
     order: 1;
-  };
-  &>section.app {
+  }
+;
+  & > section.app {
     position: relative;
     height: 100%;
     flex-basis: 100%;
@@ -44,7 +45,7 @@ body section.wrapper {
       width: 85%;
       height: 100%;
       transform: translate3d(-100%, 0px, 0px);
-      z-index:20;
+      z-index: 20;
       @include transition(transform $animation-duration-out ease-in-out);
 
       .panel-body {
@@ -67,7 +68,7 @@ body section.wrapper {
       width: 100%;
       height: 100%;
       transform: translate3d(0px, 0px, 0px);
-      z-index:10;
+      z-index: 10;
       @include transition(transform $animation-duration-out ease-in-out);
 
       &.menu-open {
@@ -77,7 +78,8 @@ body section.wrapper {
 
     }
 
-  };
+  }
+;
   /*&>footer {
     flex-basis: 50px;
     max-height: 50px;
